Fix of text align in additional information title

--- a/src/styles.css
+++ b/src/styles.css
@@ -136,7 +136,6 @@ h1 {
   box-shadow: var(--bump-shadow);
   padding: 1rem 0.4rem;
   border-radius: 24px;
-  text-align: cenetr;
 }
 
 .additional-information:active {
@@ -148,6 +147,7 @@ h1 {
   color: var(--color-super-strong-secondary);
   text-transform: uppercase;
   font-size: 1.4rem;
+  text-align: center;
 }
 
 .additional-information_body {
